--- a/src/app/pages/admin-reservations/all-reservation/all-reservation.component.html
+++ b/src/app/pages/admin-reservations/all-reservation/all-reservation.component.html
@@ -1,5 +1,6 @@
 <div class="reservationContainer">
     <div class="resBoxMain">
+        <h2><a routerLink="/Administrator">Return To DashBoard</a></h2>
         <table>
             <thead>
                 <tr>
