--- a/src/app/pages/dash-board/dash-board.component.html
+++ b/src/app/pages/dash-board/dash-board.component.html
@@ -22,6 +22,7 @@
                 </div>
                 <div class="unitDetails">
                     <div class="infoBox">
+                        <h1>Rental ID: {{rental['id']}} </h1>
                         <h1>Make: {{rental['make']}}</h1>
                         <h2>Model: {{rental['model']}}</h2>
                         <h2>Type: {{rental['type']}}</h2>
