--- a/src/app/pages/partials/header/header.component.html
+++ b/src/app/pages/partials/header/header.component.html
@@ -10,7 +10,7 @@
             <a routerLink="/About-us" class="naviLink"><li>About</li></a>
             <a routerLink="/Register" class="naviLink"><li>Register</li></a>
             <a routerLink="/login"><li><button>Login</button></li></a>
-            
+            <a routerLink="/userProfile/{{users['id']}}"><li><button>Profile</button></a>
         </ul>
     </div>
 </div>
