--- a/src/app/pages/partials/header/header.component.css
+++ b/src/app/pages/partials/header/header.component.css
@@ -32,7 +32,7 @@ h1{
     width: 100%;
     display: flex;
     align-items: center;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     font-size: 30px;
     /* border: 1px solid red; */
     justify-content: center;
